# myriad-2017

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  lint.sh  myriad.kdev4
.kdev4/: myriad.kdev4
src/: CMakeLists.txt  engine.cpp  engine.hpp  exception.cpp  exception.hpp  hash.cpp  hash.hpp  image_attr.cpp  image_attr.hpp  image_info.cpp  image_info.hpp  main.cpp  pairer.cpp  pairer.hpp
src/ksr/: algorithm.hpp  dense_updater.hpp  error.hpp  function_view.hpp  literals.hpp  type_traits.hpp  type_util.hpp
src/test_ksr/: CMakeLists.txt  test_narrow_cast.cpp  test_type_util.cpp
